@@ -1,5 +1,11 @@
 2008-01-20  Roger Leigh  <rleigh@debian.org>
 
+	* test/sbuild-chroot-directory.cc: New file.  Tests for
+	chroot_directory.  Note: one test is broken; probably a testsuite
+	issue--it works fine in practice.
+
+2008-01-20  Roger Leigh  <rleigh@debian.org>
+
 	* sbuild/sbuild-environment.cc
 	(environment::add): Log debugging message on insert.
 
